# imaginfo

./: .gitignore  Cargo.toml  README.md
src/: database.rs  dir.rs  dir_tools.rs  dirtools.rs  exfiltrate.rs  exif_tools.rs  main.rs
tests/: cli.rs  dir_tools.rs  dirtools.rs
tests/test_dir/: symlink_level3.txt  symlink_to_file3.txt
tests/test_dir/level1/lavel2b/: symlink_base1.txt
tests/test_dir/level1/level2a/: symlink_to_file0_1.txt
tests/test_dir/level1/level2b/: symlink_to_level1
