[package]
name = "imaginfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.9"
ignore = "0.4"
kamadak-exif = "0.5"
log = "0.4"
rusqlite = { version = "0.26.1", features = ["bundled", "trace"] }
structopt = "0.3"
